[package]
name = "tiled_support"
version = "0.2.0"
authors = ["Jasper Meggitt <jasper.meggitt@gmail.com>"]
edition = "2018"

[features]
default = ["amethyst/tiles"]

[dependencies]
tiled = { git = "https://github.com/jmeggitt/rs-tiled.git" }
sheep = "0.3.0"
image = "0.22"
amethyst = "0.13"

[dev-dependencies]
log = { version = "0.4.6", features = ["serde"] }

[[example]]
name = "concept"
path = "examples/concept/main.rs"
