[package]
name = "amethyst_tiled"
version = "0.2.1"
authors = ["Jasper Meggitt <jasper.meggitt@gmail.com>"]
edition = "2021"
description = "Support for loading liled tile maps as prefabs for textures in the amethyst game engine"
license = "MIT"
repository = "https://github.com/jmeggitt/amethyst-tiled"
keywords = ["amethyst", "tiled"]
categories = ["games", "graphics", "encoding"]
readme = "readme.md"

[features]
default = ["amethyst/tiles"]
profiler = ["thread_profiler", "amethyst/profiler"]

[dependencies]
tiled = { git = "https://github.com/jmeggitt/rs-tiled.git" }
sheep = "0.3.0"
image = "0.24.2"
amethyst = "0.15.3"
thread_profiler = {version = "0.3", optional = true }

[dev-dependencies]
log = { version = "0.4.17", features = ["serde"] }

[[example]]
name = "concept"
path = "examples/concept/main.rs"
